--- a/web/components/text-link/text-link.module.scss
+++ b/web/components/text-link/text-link.module.scss
@@ -39,6 +39,7 @@
         display: block;
         user-select: none;
         pointer-events: none;
+        margin: 0px;
       }
     }
   }
